--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,72 @@
  *= require_tree .
  *= require_self
  */
+
+*{margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
+.login{
+  background-color:lightgray;
+}
+
+.btn{
+  margin:10px 30px;
+}
+
+.admin_login{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+span{
+  background: lightgray;
+  padding: 0 10px;
+  position: relative;
+  left: 150px;
+  text-align: center;
+  margin-bottom: 50px;
+  font-size: 20px;
+}
+
+.field{
+  margin-bottom: 10px;
+  position: relative;
+  left: 40px;
+  size: 50px;
+}
+
+.actions{
+  margin-top: 15px;
+
+}
+
+.wrapper{
+    min-height: 100vh;
+    position: relative;
+    padding-bottom: 120px;
+    box-sizing: border-box;
+}
+
+footer{
+    width: 100%;
+    background-color: #89c7de;
+    color: #fff;
+    text-align: center;
+    padding: 30px 0;
+
+    position: absolute;
+    bottom: 0;
+}
+
+label{
+  text-align: center;
+}
+
+.nowrap {
+  white-space: nowrap;
+}
