--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<span>会員一覧</span>
+
+<div class="col-lg-4">
+       <table class="table table-inverse">
+          <thead>
+            <tr>
+              <th>会員ID</th>
+              <th>氏名</th>
+              <th>メールアドレス</th>
+              <th>ステータス</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <% @customers.each do |customer| %>
+              <tr>
+                <td><%= customer.id %></td>
+                <td>
+                  <%= link_to admin_cuatomer_path do %>
+                  <%= customer.last_name %><%= customer.first_name %>
+                  <% end %>
+                </td>
+                <td><%= customer.email %></td>
+                <td><%= customer.is_active %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+    </div>
