--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,14 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<span>ジャンル編集</span>
+
+<div class="container">
+
+    <%= form_with model: @genre, url: admin_genre_path(@genre.id), local:true do |f| %>
+        <div class="form-group">
+          <label>ジャンル名　　</label>
+            <%= f.text_field :name %>
+            <%= f.submit '変更を保存', class:"btn btn-success" %>
+        </div>
+
+    <% end %>
+
+</div>
