--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,37 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<span>ジャンル一覧・追加</span>
+
+<div class="container">
+
+    <%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
+          <div class="form-group">
+          <label>ジャンル名　　</label>
+            <%= f.text_field :name %>
+            <%= f.submit '新規登録', class:"btn btn-success" %>
+          </div>
+
+        <% end %>
+
+    <div class="col-lg-4">
+       <table class="table table-inverse">
+          <thead>
+            <tr>
+              <th>ジャンル</th>
+              <th colspan="1"></th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <% @genres.each do |genre| %>
+              <tr>
+                <td><%= genre.name %></td>
+                <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class:"btn btn-success"%></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+    </div>
+
+
+
+</div>
+
