--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<span>商品一覧</span>
+
+ <table class="table table-inverse">
+          <thead>
+            <tr>
+              <th>商品ID</th>
+              <th>商品名</th>
+              <th>税抜価格</th>
+              <th>ジャンル</th>
+              <th>ステータス</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <% @items.each do |item| %>
+              <tr>
+                <td><%= item.id %></td>
+                <td>
+                  <%= link_to admin_item_path(item.id) do %>
+                  <%= item.name %>
+                  <% end %>
+                </td>
+                <td><%= item.price %></td>
+                <td><%= item.genre_id %></td>
+                <td>
+                  <% if item.is_active == true %>
+                  販売中
+                  <% else %>
+                  販売停止中
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
